# 최소 CMake 버전 설정
cmake_minimum_required(VERSION 3.10)

# 프로젝트 이름 및 버전
project(V274X_DAQ VERSION 1.0 LANGUAGES CXX)

# C++17 표준 사용
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)

# CMakeLists.txt의 상단에 추가
set(CMAKE_INSTALL_PREFIX ${CMAKE_SOURCE_DIR})

# yaml-cpp, ROOT 라이브러리 찾기
find_package(ryml REQUIRED)
find_package(c4core REQUIRED)
find_package(ROOT REQUIRED)

# Qt 라이브러리 찾기
find_package(Qt6 COMPONENTS Core Gui Widgets REQUIRED)

# 라이브러리 디렉토리 추가
# (라이브러리 디렉토리를 프로젝트의 라이브러리 경로로 수정)
link_directories(/usr/local/lib /opt/homebrew/lib)

# 외부 라이브러리 링크
# (여기에 실제 라이브러리 이름을 추가)
find_library(CAEN_FELib_PATH NAMES CAEN_FELib PATHS /usr/local/lib)

# v2740 관련 소스 파일 목록 설정
set(V2740_SOURCES
    CAENV2740.cxx
    CAENV2740Par.cxx
    CAENV2740Event.cxx
    QCAENV2740.cxx
    # 필요한 다른 소스 파일들을 여기에 추가하세요
)

# v2740 공유 라이브러리 생성
add_library(v2740 SHARED ${V2740_SOURCES})
set_target_properties(v2740 PROPERTIES
   AUTOMOC ON
   AUTOUIC ON
   AUTORCC ON
)

#set(RESOURCE_FILES
#resources.qrc
#)

#qt6_add_resources(RESOURCES "${RESOURCE_FILES}")

target_sources(v2740 PRIVATE ${RESOURCES})

# v2740 라이브러리에 대한 include 디렉토리 설정
target_include_directories(v2740 PUBLIC /usr/local/include /opt/homebrew/include)

# v2740 라이브러리 링크
target_link_libraries(v2740 PRIVATE ${CAEN_FELib_PATH} ryml c4core Qt6::Core Qt6::Gui Qt6::Widgets)

# v2740 라이브러리 설치
install(TARGETS v2740
    EXPORT v2740Targets
    LIBRARY DESTINATION lib
    ARCHIVE DESTINATION lib
    RUNTIME DESTINATION bin
)

# daq.cxx 컴파일 관련 내용 추가
add_executable(daq daq.cxx)
target_link_libraries(daq PRIVATE v2740)

# daq 실행 파일 설치
install(TARGETS daq
    RUNTIME DESTINATION bin
)

# v274x_daq.cxx 컴파일 관련 내용 추가
# The MACOSX_BUNDLE_ICON_FILE variable is added to the Info.plist
# generated by CMake. This variable contains the .icns file name,
# without the path.
set(MACOSX_BUNDLE_ICON_FILE macosx.icns)

# And the following tells CMake where to find and install the file itself.
set(app_icon_macos "${CMAKE_CURRENT_SOURCE_DIR}/icons/macosx.icns")
set_source_files_properties(${app_icon_macos} PROPERTIES
        MACOSX_PACKAGE_LOCATION "Resources")

add_executable(v274x_daq v274x_daq.cxx)
#add_executable(v274x_daq MACOSX_BUNDLE v274x_daq.cxx)
#target_sources(v274x_daq PRIVATE ${app_icon_macos})  # 아이콘 파일 추가
target_link_libraries(v274x_daq PRIVATE v2740 Qt6::Widgets)

# v274x_daq 실행 파일 설치
install(TARGETS v274x_daq
    RUNTIME DESTINATION bin
    #BUNDLE DESTINATION bin  # BUNDLE DESTINATION 추가
)

# raw2root 컴파일 관련 내용 추가
add_executable(raw2root raw2root.cxx)
target_include_directories(raw2root PRIVATE /usr/local/include ${ROOT_INCLUDE_DIRS})
target_link_libraries(raw2root PRIVATE v2740 ${ROOT_LIBRARIES})

# raw2root 실행 파일 설치
install(TARGETS raw2root
    RUNTIME DESTINATION bin
)

# 옵션으로 디버깅 정보 생성
if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    add_definitions(-DDEBUG)
endif()

# 설치된 타겟을 사용할 수 있도록 설정
install(EXPORT v2740Targets
    FILE v2740Targets.cmake
    NAMESPACE v2740::
    DESTINATION lib/cmake/v2740
)